[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
derive_more = "2.0.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["sync"] }
